# trafo

./: .gitignore  LICENSE  README.md  pyproject.toml
packaging/: launch.py  trafo.spec
scripts/: build_macos.sh  make_icon.py
src/trafo/: __init__.py  __main__.py  app.py  camera.py  cli.py  config.py  demos.py  engine.py  permissions.py
src/trafo/gaze/: __init__.py  calibration.py  clicks.py  estimator.py  features.py  head_pose.py  landmarks.py  pursuit.py  smoothing.py  stabilizer.py
src/trafo/ui/: __init__.py  app_rules.py  calibration.py  controller.py  debug_view.py  main_window.py  onboarding.py  overlay.py  theme.py  tray.py  widgets.py  worker.py
src/trafo/winmgr/: __init__.py  base.py  macos.py
tests/: test_app_rules.py  test_calibration.py  test_clicks.py  test_engine.py  test_features.py  test_macos_winmgr.py  test_permissions.py  test_pursuit.py  test_screen_lock.py  test_stabilizer.py
