[project]
name = "trafo"
version = "0.1.0"
description = "Gaze-driven window focus: look at a window to bring it to the front"
requires-python = ">=3.10,<3.13"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "mediapipe>=0.10.14",
    "pyside6>=6.7",
    "pynput>=1.7",
    'pyobjc-framework-Quartz>=10; sys_platform == "darwin"',
    'pyobjc-framework-ApplicationServices>=10; sys_platform == "darwin"',
    'pyobjc-framework-Cocoa>=10; sys_platform == "darwin"',
    'pyobjc-framework-AVFoundation>=10; sys_platform == "darwin"',
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
trafo = "trafo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trafo"]

[tool.uv]
python-preference = "managed"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
